Update `ChangeInstallLocationInSettings` translation to make it clearer

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=حدد لغة العرض.
 CouldntLaunchApplication=تعذر تشغيل التطبيق.
 CouldntRemoveShortcut=تعذر إزالة الاختصار.
 ApplicationWillBeInstalledAt=سيتم تثبيت التطبيق في: 
-ChangeInstallLocationInSettings=إذا كنت تفضل موقعًا مختلفًا، فيمكنك تغييره في الإعدادات.
+ChangeInstallLocationInSettings=إذا كنت تفضل أن يتم تثبيت التطبيق في مكان آخر، اضغط على "إلغاء" وقم بضبط موقع التثبيت في إعدادات مشغل Jam54.
 Cancel=إلغاء
 FailedDownloadingFiles=فشل في تحميل الملفات المطلوبة بعد عدة محاولات.
