--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Wählen Sie eine Anzeigesprache.
 CouldntLaunchApplication=Anwendung konnte nicht gestartet werden.
 CouldntRemoveShortcut=Verknüpfung konnte nicht entfernt werden.
 ApplicationWillBeInstalledAt=Die Anwendung wird installiert unter: 
-ChangeInstallLocationInSettings=Wenn Sie einen anderen Speicherort bevorzugen, können Sie ihn in den Einstellungen ändern.
+ChangeInstallLocationInSettings=Wenn Sie möchten, dass die Anwendung an anderer Stelle installiert wird, drücken Sie "Abbrechen" und passen Sie den Installationsort in den Einstellungen des Jam54 Launchers an.
 Cancel=Abbrechen
 FailedDownloadingFiles=Fehler beim Herunterladen der erforderlichen Dateien nach mehreren Versuchen.
