--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Selecciona un idioma de visualización.
 CouldntLaunchApplication=No se ha podido iniciar la aplicación.
 CouldntRemoveShortcut=No se puede eliminar el acceso directo.
 ApplicationWillBeInstalledAt=La aplicación se instalará en: 
-ChangeInstallLocationInSettings=Si prefieres otra ubicación, puedes cambiarla en los ajustes.
+ChangeInstallLocationInSettings=Si prefieres que la aplicación se instale en otro lugar, presiona "Cancelar" y ajusta la ubicación de instalación en la configuración del lanzador de Jam54.
 Cancel=Cancelar
 FailedDownloadingFiles=No se pudo descargar los archivos requeridos después de varios intentos.
