--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Valige kuvamise keel.
 CouldntLaunchApplication=Rakendust ei saanud käivitada.
 CouldntRemoveShortcut=Otseteed ei saanud eemaldada.
 ApplicationWillBeInstalledAt=Rakendus installitakse aadressile: 
-ChangeInstallLocationInSettings=Kui eelistate mõnda muud asukohta, saate seda seadetes muuta.
+ChangeInstallLocationInSettings=Kui eelistate, et rakendus oleks paigaldatud mujale, vajutage "Tühista" ja kohandage paigalduskohta Jam54 käivitaja seadetes.
 Cancel=Tühista
 FailedDownloadingFiles=Ei õnnestunud vajalikke faile mitme korduva katse järel alla laadida.
