--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Sélectionner une langue d'affichage.
 CouldntLaunchApplication=Impossible de lancer l'application.
 CouldntRemoveShortcut=Impossible de supprimer le raccourci.
 ApplicationWillBeInstalledAt=L'application sera installée à l'adresse suivante: 
-ChangeInstallLocationInSettings=Si vous préférez un autre emplacement, vous pouvez le modifier dans les paramètres.
+ChangeInstallLocationInSettings=Si vous préférez que l'application soit installée ailleurs, appuyez sur "Annuler" et ajustez l'emplacement d'installation dans les paramètres du lanceur Jam54.
 Cancel=Annuler
 FailedDownloadingFiles=Échec du téléchargement des fichiers requis après plusieurs tentatives.
