--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=एक प्रदर्शन भाषा का चय
 CouldntLaunchApplication=ऐप्लिकेशन लॉन्च नहीं किया जा सका.
 CouldntRemoveShortcut=शॉर्टकट नहीं निकाला जा सका.
 ApplicationWillBeInstalledAt=आवेदन यहां स्थापित किया जाएगा: 
-ChangeInstallLocationInSettings=यदि आप कोई भिन्न स्थान पसंद करते हैं, तो आप इसे सेटिंग में बदल सकते हैं।
+ChangeInstallLocationInSettings=यदि आप चाहें कि एप्लिकेशन को किसी अन्य स्थान पर स्थापित किया जाए, तो "रद्द करें" दबाएं और Jam54 लॉन्चर की सेटिंग्स में स्थापना स्थान को समायोजित करें।
 Cancel=रद्द करना
 FailedDownloadingFiles=कई पुनःप्रयासों के बाद आवश्यक फ़ाइलें डाउनलोड करने में विफल रहा।
