--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Pilih bahasa tampilan.
 CouldntLaunchApplication=Tidak dapat meluncurkan aplikasi.
 CouldntRemoveShortcut=Tidak dapat menghapus pintasan.
 ApplicationWillBeInstalledAt=Aplikasi akan dipasang di: 
-ChangeInstallLocationInSettings=Jika Anda lebih suka lokasi yang berbeda, Anda dapat mengubahnya di pengaturan.
+ChangeInstallLocationInSettings=Jika Anda lebih memilih aplikasi untuk diinstal di tempat lain, tekan "Batal" dan sesuaikan lokasi instalasi dalam pengaturan Peluncur Jam54.
 Cancel=Membatalkan
 FailedDownloadingFiles=Gagal mengunduh file yang diperlukan setelah beberapa percobaan.
