--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=表示言語を選択する。
 CouldntLaunchApplication=アプリケーションを起動できませんでした。
 CouldntRemoveShortcut=ショートカットを削除できませんでした。
 ApplicationWillBeInstalledAt=でインストールされるアプリケーションです：
-ChangeInstallLocationInSettings=別の場所がいい場合は、設定で変更することができます。
+ChangeInstallLocationInSettings=別の場所にアプリケーションをインストールする場合は、「キャンセル」を押して Jam54 ランチャーの設定でインストール場所を調整してください。
 Cancel=キャンセル
 FailedDownloadingFiles=複数回の再試行の後、必要なファイルのダウンロードに失敗しました。
