--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Selecteer een weergavetaal.
 CouldntLaunchApplication=Kon de applicatie niet starten.
 CouldntRemoveShortcut=Kan de snelkoppeling niet verwijderen.
 ApplicationWillBeInstalledAt=De applicatie wordt geïnstalleerd op: 
-ChangeInstallLocationInSettings=Als u een andere locatie verkiest, kunt u die in de instellingen wijzigen.
+ChangeInstallLocationInSettings=Als u wilt dat de toepassing ergens anders wordt geïnstalleerd, drukt u op "Annuleren" en past u de installatielocatie aan in de instellingen van de Jam54 Launcher.
 Cancel=Annuleren
 FailedDownloadingFiles=Mislukt om de vereiste bestanden te downloaden na meerdere pogingen.
