--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Selecione um idioma de exibição.
 CouldntLaunchApplication=Não foi possível iniciar o aplicativo.
 CouldntRemoveShortcut=Não foi possível remover o atalho.
 ApplicationWillBeInstalledAt=O aplicativo será instalado em: 
-ChangeInstallLocationInSettings=Se preferir uma localização diferente, pode alterá-la nas definições.
+ChangeInstallLocationInSettings=Se preferir que a aplicação seja instalada noutro local, pressione "Cancelar" e ajuste a localização de instalação nas definições do lançador Jam54.
 Cancel=Cancelar
 FailedDownloadingFiles=Falha ao baixar os arquivos necessários após várias tentativas.
