--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Выберите язык отображения.
 CouldntLaunchApplication=Не удалось запустить приложение.
 CouldntRemoveShortcut=Не удалось удалить ярлык.
 ApplicationWillBeInstalledAt=Приложение будет установлено по адресу: 
-ChangeInstallLocationInSettings=Если вы предпочитаете другое местоположение, вы можете изменить его в настройках.
+ChangeInstallLocationInSettings=Если вы хотите, чтобы приложение было установлено в другом месте, нажмите «Отмена» и настройте местоположение установки в настройках запуска Jam54.
 Cancel=Отменить
 FailedDownloadingFiles=Не удалось загрузить необходимые файлы после нескольких попыток.
