--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Bir görüntüleme dili seçin.
 CouldntLaunchApplication=Uygulama başlatılamadı.
 CouldntRemoveShortcut=Kısayol kaldırılamadı.
 ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
-ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
+ChangeInstallLocationInSettings=Eğer uygulamanın başka bir yere kurulmasını tercih ederseniz, "İptal"i seçip Jam54 Başlatıcısı'nın ayarlarında kurulum konumunu ayarlayabilirsiniz.
 Cancel=İptal
 FailedDownloadingFiles=Gerekli dosyaları birden çok denemeden sonra indirme başarısızdı.
