--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=Select a display language.
 CouldntLaunchApplication=Couldn't launch application.
 CouldntRemoveShortcut=Couldn't remove shortcut.
 ApplicationWillBeInstalledAt=The application will be installed at: 
-ChangeInstallLocationInSettings=If you prefer a different location, you can change it in the settings.
+ChangeInstallLocationInSettings=If you prefer the application to be installed elsewhere, simply press "Cancel" and adjust the installation location in the Jam54 Launcher's settings.
 Cancel=Cancel
 FailedDownloadingFiles=Failed to download the required files after multiple retries.
