--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=표시 언어를 선택합니다.
 CouldntLaunchApplication=응용 프로그램을 시작할 수 없습니다.
 CouldntRemoveShortcut=바로 가기를 제거할 수 없습니다.
 ApplicationWillBeInstalledAt=응용 프로그램은 다음 위치에 설치됩니다. 
-ChangeInstallLocationInSettings=다른 위치를 선호하는 경우 설정에서 변경할 수 있습니다.
+ChangeInstallLocationInSettings=다른 곳에 앱을 설치하려면 "취소"를 누르고 Jam54 런처의 설정에서 설치 위치를 조정하십시오.
 Cancel=취소
 FailedDownloadingFiles=여러 번 재시도 후에 필요한 파일을 다운로드하지 못했습니다.
