--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -71,6 +71,6 @@ SelectDisplayLangauge=选择显示语言。
 CouldntLaunchApplication=无法启动应用程序。
 CouldntRemoveShortcut=无法删除快捷方式。
 ApplicationWillBeInstalledAt=该应用程序将安装在：
-ChangeInstallLocationInSettings=如果您喜欢不同的位置，可以在设置中进行更改。
+ChangeInstallLocationInSettings=如果您希望应用程序安装到其他位置，请按“取消”，然后在 Jam54 Launcher 的设置中调整安装位置。
 Cancel=取消
 FailedDownloadingFiles=多次重试后无法下载所需文件。
