Add additional checks when moving/removing/updating files to make sure the Jam54 Launcher has sufficient permissions

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=سيتم تثبيت التطبيق في:
 ChangeInstallLocationInSettings=إذا كنت تفضل أن يتم تثبيت التطبيق في مكان آخر، اضغط على "إلغاء" وقم بضبط موقع التثبيت في إعدادات مشغل Jam54.
 Cancel=إلغاء
 FailedDownloadingFiles=فشل في تحميل الملفات المطلوبة بعد عدة محاولات.
+InsufficientPrivileges=لا يمتلك مشغل Jam54 الامتيازات الكافية للوصول إلى هذا الدليل: {0}. لا يمكن تنفيذ الإجراء المطلوب. أعد تشغيل مشغل Jam54 كمسؤول للمتابعة.
+MovingFiles=جارٍ نقل الملفات، يرجى الانتظار
+NotAllOldFilesDeleted=تم نقل دليل التثبيت إلى الموقع الجديد بنجاح. ومع ذلك، بسبب استخدام بعض التطبيقات، لم يتمكن بعض الملفات من الإزالة من الموقع القديم: {0}.
+CancelInstall=أو قم بإلغاء إجراء التثبيت قبل تغيير مسار دليل التثبيت.
+CancelUninstall=أو قم بإلغاء إجراء التحقق من الملف قبل تغيير مسار دليل التثبيت.
+CancelValidationProcedure=أو قم بإلغاء إجراء الإلغاء قبل تغيير مسار دليل التثبيت.
