--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=Die Anwendung wird installiert unter:
 ChangeInstallLocationInSettings=Wenn Sie möchten, dass die Anwendung an anderer Stelle installiert wird, drücken Sie "Abbrechen" und passen Sie den Installationsort in den Einstellungen des Jam54 Launchers an.
 Cancel=Abbrechen
 FailedDownloadingFiles=Fehler beim Herunterladen der erforderlichen Dateien nach mehreren Versuchen.
+InsufficientPrivileges=Der Jam54 Launcher verfügt nicht über ausreichende Berechtigungen, um auf dieses Verzeichnis zuzugreifen: {0}. Die angeforderte Aktion kann nicht ausgeführt werden. Starten Sie den Jam54 Launcher erneut als Administrator, um fortzufahren.
+MovingFiles=Dateien werden verschoben, bitte warten.
+NotAllOldFilesDeleted=Die Verschiebung des Installationsverzeichnisses an den neuen Ort war erfolgreich. Aufgrund der Verwendung bestimmter Anwendungen konnten jedoch einige Dateien nicht vom alten Speicherort entfernt werden: {0}.
+CancelInstall=Oder brechen Sie den Installationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
+CancelUninstall=Oder brechen Sie den Dateiüberprüfungsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
+CancelValidationProcedure=Oder brechen Sie den Deinstallationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
