--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=The application will be installed at:
 ChangeInstallLocationInSettings=If you prefer the application to be installed elsewhere, simply press "Cancel" and adjust the installation location in the Jam54 Launcher's settings.
 Cancel=Cancel
 FailedDownloadingFiles=Failed to download the required files after multiple retries.
+InsufficientPrivileges=The Jam54 Launhcer has insufficient privileges to access this directory: {0}. The requested action cannot be performed. Relaunch the Jam54 Launcher as administrator to continue
+MovingFiles=Moving files, please wait.
+NotAllOldFilesDeleted=The relocation of the installation directory to the new location was successful. However, due to certain applications being in use, some files could not be removed from the old location: {0}.
+CancelInstall=Or cancel the installation procedure before changing the location of the installation directory.
+CancelUninstall=Or cancel the file validation procedure before changing the location of the installation directory.
+CancelValidationProcedure=Or cancel the uninstall procedure before changing the location of the installation directory.
