--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=Rakendus installitakse aadressile:
 ChangeInstallLocationInSettings=Kui eelistate, et rakendus oleks paigaldatud mujale, vajutage "Tühista" ja kohandage paigalduskohta Jam54 käivitaja seadetes.
 Cancel=Tühista
 FailedDownloadingFiles=Ei õnnestunud vajalikke faile mitme korduva katse järel alla laadida.
+InsufficientPrivileges=Jam54 käivitaja pole sellele kataloogile ({0}) juurdepääsuks piisavalt õigusi. Päringut ei saa teostada. Jätkamiseks käivitage Jam54 käivitaja uuesti administraatorina.
+MovingFiles=Failide liigutamine, palun oodake.
+NotAllOldFilesDeleted=Paigalduskataloogi ümberpaigutamine uude asukohta oli edukas. Siiski, teatud rakenduste kasutamise tõttu ei õnnestunud mõnda faili vanast asukohast eemaldada: {0}.
+CancelInstall=Või katkestage installimisprotseduur enne installikataloogi asukoha muutmist.
+CancelUninstall=Või katkestage faili valideerimise protseduur enne installikataloogi asukoha muutmist.
+CancelValidationProcedure=Või katkestage desinstallimisprotseduur enne installikataloogi asukoha muutmist.
