--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=L'application sera installée à l'adresse suivante
 ChangeInstallLocationInSettings=Si vous préférez que l'application soit installée ailleurs, appuyez sur "Annuler" et ajustez l'emplacement d'installation dans les paramètres du lanceur Jam54.
 Cancel=Annuler
 FailedDownloadingFiles=Échec du téléchargement des fichiers requis après plusieurs tentatives.
+InsufficientPrivileges=Le lanceur Jam54 n'a pas les privilèges suffisants pour accéder à ce répertoire : {0}. L'action demandée ne peut pas être effectuée. Relancez le lanceur Jam54 en tant qu'administrateur pour continuer.
+MovingFiles=Déplacement des fichiers, veuillez patienter.
+NotAllOldFilesDeleted=La relocalisation du répertoire d'installation vers le nouvel emplacement a été réussie. Cependant, en raison de l'utilisation de certaines applications, certains fichiers n'ont pas pu être supprimés de l'ancien emplacement : {0}.
+CancelInstall=Ou annuler la procédure d'installation avant de modifier l'emplacement du répertoire d'installation.
+CancelUninstall=Ou annuler la procédure de validation de fichier avant de modifier l'emplacement du répertoire d'installation.
+CancelValidationProcedure=Ou annuler la procédure de désinstallation avant de modifier l'emplacement du répertoire d'installation.
