--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=आवेदन यहां स्थापित 
 ChangeInstallLocationInSettings=यदि आप चाहें कि एप्लिकेशन को किसी अन्य स्थान पर स्थापित किया जाए, तो "रद्द करें" दबाएं और Jam54 लॉन्चर की सेटिंग्स में स्थापना स्थान को समायोजित करें।
 Cancel=रद्द करना
 FailedDownloadingFiles=कई पुनःप्रयासों के बाद आवश्यक फ़ाइलें डाउनलोड करने में विफल रहा।
+InsufficientPrivileges=Jam54 लॉन्चर को इस निर्देशिका तक पहुँचने के लिए पर्याप्त विशेषाधिकार नहीं हैं: {0}। अनुरोधित क्रिया को कार्यान्वित नहीं किया जा सकता है। जारी रखने के लिए Jam54 लॉन्चर को पुनः प्रशासक के रूप में पुनः आरंभ करें।
+MovingFiles=फ़ाइलें स्थानांतरित हो रही हैं, कृपया प्रतीक्षा करें
+NotAllOldFilesDeleted=इंस्टॉलेशन डायरेक्ट्री को नए स्थान पर सफलतापूर्वक स्थानांतरित किया गया। हालांकि, कुछ ऐप्लिकेशन का उपयोग होने के कारण, पुराने स्थान से कुछ फ़ाइलें हटाई नहीं जा सकीं: {0}।
+CancelInstall=या इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले इंस्टॉलेशन प्रक्रिया को रद्द करें।
+CancelUninstall=या फ़ाइल सत्यापन प्रक्रिया को रद्द करें इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले।
+CancelValidationProcedure=या डिइंस्टाल प्रक्रिया को रद्द करें इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले।
