--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=Aplikasi akan dipasang di:
 ChangeInstallLocationInSettings=Jika Anda lebih memilih aplikasi untuk diinstal di tempat lain, tekan "Batal" dan sesuaikan lokasi instalasi dalam pengaturan Peluncur Jam54.
 Cancel=Membatalkan
 FailedDownloadingFiles=Gagal mengunduh file yang diperlukan setelah beberapa percobaan.
+InsufficientPrivileges=Jam54 Launcher tidak memiliki cukup hak akses untuk mengakses direktori ini: {0}. Tindakan yang diminta tidak dapat dilakukan. Mulai ulang Jam54 Launcher sebagai administrator untuk melanjutkan.
+MovingFiles=Sedang memindahkan file, mohon tunggu.
+NotAllOldFilesDeleted=Pemindahan direktori instalasi ke lokasi baru berhasil. Namun, karena beberapa aplikasi sedang digunakan, beberapa file tidak dapat dihapus dari lokasi lama: {0}.
+CancelInstall=Atau batalkan prosedur instalasi sebelum mengubah lokasi direktori instalasi.
+CancelUninstall=Atau batalkan prosedur validasi file sebelum mengubah lokasi direktori instalasi.
+CancelValidationProcedure=Atau batalkan prosedur penghapusan sebelum mengubah lokasi direktori instalasi.
