--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=でインストールされるアプリケーショ
 ChangeInstallLocationInSettings=別の場所にアプリケーションをインストールする場合は、「キャンセル」を押して Jam54 ランチャーの設定でインストール場所を調整してください。
 Cancel=キャンセル
 FailedDownloadingFiles=複数回の再試行の後、必要なファイルのダウンロードに失敗しました。
+InsufficientPrivileges=Jam54ランチャーには、このディレクトリにアクセスするための十分な権限がありません: {0}。要求されたアクションを実行できません。続行するには、Jam54ランチャーを管理者として再起動してください。
+MovingFiles=ファイルを移動中です。お待ちください。
+NotAllOldFilesDeleted=インストールディレクトリの新しい場所への移動は成功しました。ただし、特定のアプリケーションが使用中であるため、古い場所から一部のファイルを削除できませんでした: {0}。
+CancelInstall=インストールディレクトリの場所を変更する前にインストール手順をキャンセルしてください。
+CancelUninstall=アンインストールディレクトリの場所を変更する前にファイル検証手順をキャンセルしてください。
+CancelValidationProcedure=インストールディレクトリの場所を変更する前にアンインストール手順をキャンセルしてください。
