--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=O aplicativo será instalado em:
 ChangeInstallLocationInSettings=Se preferir que a aplicação seja instalada noutro local, pressione "Cancelar" e ajuste a localização de instalação nas definições do lançador Jam54.
 Cancel=Cancelar
 FailedDownloadingFiles=Falha ao baixar os arquivos necessários após várias tentativas.
+InsufficientPrivileges=O lançador Jam54 não tem privilégios suficientes para acessar este diretório: {0}. A ação solicitada não pode ser realizada. Reinicie o lançador Jam54 como administrador para continuar.
+MovingFiles=Arquivos estão sendo movidos, por favor aguarde.
+NotAllOldFilesDeleted=A mudança do diretório de instalação para o novo local foi bem-sucedida. No entanto, devido ao uso de certos aplicativos, alguns arquivos não puderam ser removidos do local antigo: {0}.
+CancelInstall=Ou cancele o procedimento de instalação antes de alterar o local do diretório de instalação.
+CancelUninstall=Ou cancele o procedimento de validação de arquivos antes de alterar o local do diretório de instalação.
+CancelValidationProcedure=Ou cancele o procedimento de desinstalação antes de alterar o local do diretório de instalação.
