--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir:
 ChangeInstallLocationInSettings=Eğer uygulamanın başka bir yere kurulmasını tercih ederseniz, "İptal"i seçip Jam54 Başlatıcısı'nın ayarlarında kurulum konumunu ayarlayabilirsiniz.
 Cancel=İptal
 FailedDownloadingFiles=Gerekli dosyaları birden çok denemeden sonra indirme başarısızdı.
+InsufficientPrivileges=Jam54 Başlatıcısı bu dizine erişmek için yeterli izne sahip değil: {0}. İstenen eylem gerçekleştirilemiyor. Devam etmek için Jam54 Başlatıcısını yönetici olarak yeniden başlatın.
+MovingFiles=Dosyalar taşınıyor, lütfen bekleyin.
+NotAllOldFilesDeleted=Yükleme dizininin yeni konuma başarılı bir şekilde taşınması gerçekleştirildi. Ancak, bazı uygulamaların kullanımda olması nedeniyle, eski konumdan bazı dosyaların kaldırılamadığı bildirildi: {0}.
+CancelInstall=Kurulum dizini konumunu değiştirmeden önce kurulum prosedürünü iptal edin.
+CancelUninstall=Kurulum dizini konumunu değiştirmeden önce dosya doğrulama prosedürünü iptal edin.
+CancelValidationProcedure=Kurulum dizini konumunu değiştirmeden önce kaldırma prosedürünü iptal edin.
