--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=该应用程序将安装在：
 ChangeInstallLocationInSettings=如果您希望应用程序安装到其他位置，请按“取消”，然后在 Jam54 Launcher 的设置中调整安装位置。
 Cancel=取消
 FailedDownloadingFiles=多次重试后无法下载所需文件。
+InsufficientPrivileges=Jam54启动器没有足够的权限访问此目录：{0}。无法执行请求的操作。请以管理员身份重新启动Jam54启动器以继续。
+MovingFiles=正在移动文件，请稍候。
+NotAllOldFilesDeleted=安装目录已成功迁移到新位置。但由于某些应用正在使用，一些文件无法从旧位置删除：{0}。
+CancelInstall=或在更改安装目录位置之前取消安装过程。
+CancelUninstall=或在更改安装目录位置之前取消文件验证过程。
+CancelValidationProcedure=或在更改安装目录位置之前取消卸载过程。
