--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=La aplicación se instalará en:
 ChangeInstallLocationInSettings=Si prefieres que la aplicación se instale en otro lugar, presiona "Cancelar" y ajusta la ubicación de instalación en la configuración del lanzador de Jam54.
 Cancel=Cancelar
 FailedDownloadingFiles=No se pudo descargar los archivos requeridos después de varios intentos.
+InsufficientPrivileges=El lanzador Jam54 no tiene suficientes privilegios para acceder a este directorio: {0}. La acción solicitada no se puede realizar. Vuelve a ejecutar el lanzador Jam54 como administrador para continuar.
+MovingFiles=Moviendo archivos, por favor espere.
+NotAllOldFilesDeleted=La reubicación del directorio de instalación en la nueva ubicación fue exitosa. Sin embargo, debido al uso de ciertas aplicaciones, algunos archivos no pudieron ser eliminados de la ubicación anterior: {0}.
+CancelInstall=O cancelar el procedimiento de instalación antes de cambiar la ubicación del directorio de instalación.
+CancelUninstall=O cancelar el procedimiento de validación de archivos antes de cambiar la ubicación del directorio de instalación.
+CancelValidationProcedure=O cancelar el procedimiento de desinstalación antes de cambiar la ubicación del directorio de instalación.
