--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -74,3 +74,9 @@ ApplicationWillBeInstalledAt=De applicatie wordt geïnstalleerd op:
 ChangeInstallLocationInSettings=Als u wilt dat de toepassing ergens anders wordt geïnstalleerd, drukt u op "Annuleren" en past u de installatielocatie aan in de instellingen van de Jam54 Launcher.
 Cancel=Annuleren
 FailedDownloadingFiles=Mislukt om de vereiste bestanden te downloaden na meerdere pogingen.
+InsufficientPrivileges=De Jam54 Launcher heeft onvoldoende privileges om toegang te krijgen tot deze map: {0}. De gevraagde actie kan niet worden uitgevoerd. Start de Jam54 Launcher opnieuw als administrator om door te gaan.
+MovingFiles=Bestanden worden verplaatst, even geduld aub.
+NotAllOldFilesDeleted=De verplaatsing van de installatiemap naar de nieuwe locatie is succesvol verlopen. Echter, vanwege het gebruik van bepaalde applicaties konden sommige bestanden niet worden verwijderd van de oude locatie: {0}.
+CancelInstall=Of annuleer de installatieprocedure voordat u de locatie van de installatiemap wijzigt.
+CancelUninstall=Of annuleer de bestandsvalidatieprocedure voordat u de locatie van de installatiemap wijzigt.
+CancelValidationProcedure=Of annuleer de deïnstallatieprocedure voordat u de locatie van de installatiemap wijzigt.
