Refactor the way shortcuts are created. Rather than making a shortcut to a specific application's executable, a shortcut is created to the Jam54 Launcher with the application id as a CLI argument. This way the shortcuts will still work to launch applications, even after the installation location was changed after a shortcut was created

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=تم نقل دليل التثبيت إلى الموقع ا
 CancelInstall=أو قم بإلغاء إجراء التثبيت قبل تغيير مسار دليل التثبيت.
 CancelUninstall=أو قم بإلغاء إجراء التحقق من الملف قبل تغيير مسار دليل التثبيت.
 CancelValidationProcedure=أو قم بإلغاء إجراء الإلغاء قبل تغيير مسار دليل التثبيت.
+ApplicationCouldNotBeLaunched=تعذر تشغيل التطبيق. يرجى التأكد من تثبيت التطبيق بشكل صحيح عبر مشغل Jam54. هل ترغب في فتح مشغل Jam54 الآن؟
