--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=Die Verschiebung des Installationsverzeichnisses an den ne
 CancelInstall=Oder brechen Sie den Installationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
 CancelUninstall=Oder brechen Sie den Dateiüberprüfungsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
 CancelValidationProcedure=Oder brechen Sie den Deinstallationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
+ApplicationCouldNotBeLaunched=Die Anwendung konnte nicht gestartet werden. Bitte stellen Sie sicher, dass die Anwendung über den Jam54 Launcher korrekt installiert ist. Möchten Sie den Jam54 Launcher jetzt öffnen?
