--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=Paigalduskataloogi ümberpaigutamine uude asukohta oli edu
 CancelInstall=Või katkestage installimisprotseduur enne installikataloogi asukoha muutmist.
 CancelUninstall=Või katkestage faili valideerimise protseduur enne installikataloogi asukoha muutmist.
 CancelValidationProcedure=Või katkestage desinstallimisprotseduur enne installikataloogi asukoha muutmist.
+ApplicationCouldNotBeLaunched=Rakendust ei õnnestunud käivitada. Palun veenduge, et rakendus oleks Jam54 käivitaja kaudu korrektselt installitud. Kas soovite praegu avada Jam54 käivitaja?
