--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=इंस्टॉलेशन डायरेक्ट्
 CancelInstall=या इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले इंस्टॉलेशन प्रक्रिया को रद्द करें।
 CancelUninstall=या फ़ाइल सत्यापन प्रक्रिया को रद्द करें इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले।
 CancelValidationProcedure=या डिइंस्टाल प्रक्रिया को रद्द करें इंस्टॉलेशन डायरेक्टरी के स्थान को बदलने से पहले।
+ApplicationCouldNotBeLaunched=ऐप्लिकेशन को लॉन्च नहीं किया जा सका। कृपया सुनिश्चित करें कि ऐप्लिकेशन को ठीक से Jam54 लॉन्चर के माध्यम से स्थापित किया गया है। क्या आप अब Jam54 लॉन्चर खोलना चाहेंगे?
