--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=A mudança do diretório de instalação para o novo local
 CancelInstall=Ou cancele o procedimento de instalação antes de alterar o local do diretório de instalação.
 CancelUninstall=Ou cancele o procedimento de validação de arquivos antes de alterar o local do diretório de instalação.
 CancelValidationProcedure=Ou cancele o procedimento de desinstalação antes de alterar o local do diretório de instalação.
+ApplicationCouldNotBeLaunched=A aplicação não pôde ser lançada. Por favor, certifique-se de que a aplicação está instalada corretamente através do Jam54 Launcher. Gostaria de abrir o Jam54 Launcher agora?
