--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -80,3 +80,4 @@ NotAllOldFilesDeleted=The relocation of the installation directory to the new lo
 CancelInstall=Or cancel the installation procedure before changing the location of the installation directory.
 CancelUninstall=Or cancel the file validation procedure before changing the location of the installation directory.
 CancelValidationProcedure=Or cancel the uninstall procedure before changing the location of the installation directory.
+ApplicationCouldNotBeLaunched=The application could not be launched. Please ensure the application is installed correctly through the Jam54 Launcher. Would you like to open the Jam54 Launcher now?
