Added a separate text `APPLYING PATCH` to inform the user when the launcher is downloading/applying chunks rather than individual files

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -81,3 +81,4 @@ CancelInstall=Või katkestage installimisprotseduur enne installikataloogi asuko
 CancelUninstall=Või katkestage faili valideerimise protseduur enne installikataloogi asukoha muutmist.
 CancelValidationProcedure=Või katkestage desinstallimisprotseduur enne installikataloogi asukoha muutmist.
 ApplicationCouldNotBeLaunched=Rakendust ei õnnestunud käivitada. Palun veenduge, et rakendus oleks Jam54 käivitaja kaudu korrektselt installitud. Kas soovite praegu avada Jam54 käivitaja?
+APPLYINGPATCH=PARANDUSE RAKENDAMINE
