--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -81,3 +81,4 @@ CancelInstall=インストールディレクトリの場所を変更する前に
 CancelUninstall=アンインストールディレクトリの場所を変更する前にファイル検証手順をキャンセルしてください。
 CancelValidationProcedure=インストールディレクトリの場所を変更する前にアンインストール手順をキャンセルしてください。
 ApplicationCouldNotBeLaunched=アプリケーションを起動できませんでした。Jam54ランチャーを介してアプリケーションが正しくインストールされていることを確認してください。Jam54ランチャーを開きますか？
+APPLYINGPATCH=パッチを適用しています
