--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -81,3 +81,4 @@ CancelInstall=설치 디렉토리 위치를 변경하기 전에 설치 프로시
 CancelUninstall=설치 디렉토리 위치를 변경하기 전에 파일 유효성 검사 프로시저를 취소하십시오.
 CancelValidationProcedure=설치 디렉토리 위치를 변경하기 전에 삭제 프로시저를 취소하십시오.
 ApplicationCouldNotBeLaunched=애플리케이션을 시작할 수 없습니다. Jam54 런처를 통해 애플리케이션이 올바르게 설치되었는지 확인하십시오. 지금 Jam54 런처를 열고 싶으십니까?
+APPLYINGPATCH=패치 적용 중
