--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -81,3 +81,4 @@ CancelInstall=Или отмените процедуру установки пе
 CancelUninstall=Или отмените процедуру проверки файлов перед изменением местоположения каталога установки.
 CancelValidationProcedure=Или отмените процедуру удаления перед изменением местоположения каталога установки.
 ApplicationCouldNotBeLaunched=Приложение не может быть запущено. Пожалуйста, убедитесь, что приложение установлено правильно через Jam54 Launcher. Хотите открыть Jam54 Launcher сейчас?
+APPLYINGPATCH=ПРИМЕНЕНИЕ ПАТЧА
