--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -81,3 +81,4 @@ CancelInstall=Kurulum dizini konumunu değiştirmeden önce kurulum prosedürün
 CancelUninstall=Kurulum dizini konumunu değiştirmeden önce dosya doğrulama prosedürünü iptal edin.
 CancelValidationProcedure=Kurulum dizini konumunu değiştirmeden önce kaldırma prosedürünü iptal edin.
 ApplicationCouldNotBeLaunched=Uygulama başlatılamadı. Lütfen uygulamanın Jam54 Başlatıcı üzerinden doğru şekilde yüklendiğinden emin olun. Jam54 Başlatıcı'yı şimdi açmak ister misiniz?
+APPLYINGPATCH=YAMA UYGULANIYOR
