--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -81,3 +81,4 @@ CancelInstall=Oder brechen Sie den Installationsvorgang ab, bevor Sie den Speich
 CancelUninstall=Oder brechen Sie den Dateiüberprüfungsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
 CancelValidationProcedure=Oder brechen Sie den Deinstallationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
 ApplicationCouldNotBeLaunched=Die Anwendung konnte nicht gestartet werden. Bitte stellen Sie sicher, dass die Anwendung über den Jam54 Launcher korrekt installiert ist. Möchten Sie den Jam54 Launcher jetzt öffnen?
+APPLYINGPATCH=PATCH ANWENDEN
