--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -81,3 +81,4 @@ CancelInstall=O cancelar el procedimiento de instalación antes de cambiar la ub
 CancelUninstall=O cancelar el procedimiento de validación de archivos antes de cambiar la ubicación del directorio de instalación.
 CancelValidationProcedure=O cancelar el procedimiento de desinstalación antes de cambiar la ubicación del directorio de instalación.
 ApplicationCouldNotBeLaunched=No se pudo iniciar la aplicación. Por favor, asegúrese de que la aplicación esté instalada correctamente a través del Jam54 Launcher. ¿Le gustaría abrir el Jam54 Launcher ahora?
+APPLYINGPATCH=APLICANDO PARCHE
