--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -81,3 +81,4 @@ CancelInstall=Ou annuler la procédure d'installation avant de modifier l'emplac
 CancelUninstall=Ou annuler la procédure de validation de fichier avant de modifier l'emplacement du répertoire d'installation.
 CancelValidationProcedure=Ou annuler la procédure de désinstallation avant de modifier l'emplacement du répertoire d'installation.
 ApplicationCouldNotBeLaunched=L'application n'a pas pu être lancée. Veuillez vous assurer que l'application est correctement installée via le lanceur Jam54. Souhaitez-vous ouvrir le lanceur Jam54 maintenant ?
+APPLYINGPATCH=APPLICATION DU PATCH
