--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -81,3 +81,4 @@ CancelInstall=Of annuleer de installatieprocedure voordat u de locatie van de in
 CancelUninstall=Of annuleer de bestandsvalidatieprocedure voordat u de locatie van de installatiemap wijzigt.
 CancelValidationProcedure=Of annuleer de deïnstallatieprocedure voordat u de locatie van de installatiemap wijzigt.
 ApplicationCouldNotBeLaunched=De applicatie kon niet worden gestart. Zorg ervoor dat de applicatie correct is geïnstalleerd via de Jam54 Launcher. Wilt u de Jam54 Launcher nu openen?
+APPLYINGPATCH=PATCH TOEPASSEN
