--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -81,3 +81,4 @@ CancelInstall=Ou cancele o procedimento de instalação antes de alterar o local
 CancelUninstall=Ou cancele o procedimento de validação de arquivos antes de alterar o local do diretório de instalação.
 CancelValidationProcedure=Ou cancele o procedimento de desinstalação antes de alterar o local do diretório de instalação.
 ApplicationCouldNotBeLaunched=A aplicação não pôde ser lançada. Por favor, certifique-se de que a aplicação está instalada corretamente através do Jam54 Launcher. Gostaria de abrir o Jam54 Launcher agora?
+APPLYINGPATCH=APLICANDO PATCH
