Add tooltips to social icons on the SettingsWindow

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -82,3 +82,4 @@ CancelUninstall=Oder brechen Sie den Dateiüberprüfungsvorgang ab, bevor Sie de
 CancelValidationProcedure=Oder brechen Sie den Deinstallationsvorgang ab, bevor Sie den Speicherort des Installationsverzeichnisses ändern.
 ApplicationCouldNotBeLaunched=Die Anwendung konnte nicht gestartet werden. Bitte stellen Sie sicher, dass die Anwendung über den Jam54 Launcher korrekt installiert ist. Möchten Sie den Jam54 Launcher jetzt öffnen?
 APPLYINGPATCH=PATCH ANWENDEN
+Email=E-Mail
