--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -82,3 +82,4 @@ CancelUninstall=Atau batalkan prosedur validasi file sebelum mengubah lokasi dir
 CancelValidationProcedure=Atau batalkan prosedur penghapusan sebelum mengubah lokasi direktori instalasi.
 ApplicationCouldNotBeLaunched=Aplikasi tidak dapat diluncurkan. Harap pastikan aplikasi terinstal dengan benar melalui Jam54 Launcher. Apakah Anda ingin membuka Jam54 Launcher sekarang?
 APPLYINGPATCH=MENERAPKAN PATCH
+Email=Surel
