--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -82,3 +82,4 @@ CancelUninstall=Или отмените процедуру проверки фа
 CancelValidationProcedure=Или отмените процедуру удаления перед изменением местоположения каталога установки.
 ApplicationCouldNotBeLaunched=Приложение не может быть запущено. Пожалуйста, убедитесь, что приложение установлено правильно через Jam54 Launcher. Хотите открыть Jam54 Launcher сейчас?
 APPLYINGPATCH=ПРИМЕНЕНИЕ ПАТЧА
+Email=электронная почта
