--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -82,3 +82,4 @@ CancelUninstall=或在更改安装目录位置之前取消文件验证过程。
 CancelValidationProcedure=或在更改安装目录位置之前取消卸载过程。
 ApplicationCouldNotBeLaunched=无法启动应用程序。请确保通过 Jam54 Launcher 正确安装了应用程序。您现在要打开 Jam54 Launcher 吗？
 APPLYINGPATCH=应用补丁
+Email=电子邮件
