--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -82,3 +82,4 @@ CancelUninstall=Või katkestage faili valideerimise protseduur enne installikata
 CancelValidationProcedure=Või katkestage desinstallimisprotseduur enne installikataloogi asukoha muutmist.
 ApplicationCouldNotBeLaunched=Rakendust ei õnnestunud käivitada. Palun veenduge, et rakendus oleks Jam54 käivitaja kaudu korrektselt installitud. Kas soovite praegu avada Jam54 käivitaja?
 APPLYINGPATCH=PARANDUSE RAKENDAMINE
+Email=E-kiri
