--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -82,3 +82,4 @@ CancelUninstall=Ou annuler la procédure de validation de fichier avant de modif
 CancelValidationProcedure=Ou annuler la procédure de désinstallation avant de modifier l'emplacement du répertoire d'installation.
 ApplicationCouldNotBeLaunched=L'application n'a pas pu être lancée. Veuillez vous assurer que l'application est correctement installée via le lanceur Jam54. Souhaitez-vous ouvrir le lanceur Jam54 maintenant ?
 APPLYINGPATCH=APPLICATION DU PATCH
+Email=Courriel
