--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -82,3 +82,4 @@ CancelUninstall=Ou cancele o procedimento de validação de arquivos antes de al
 CancelValidationProcedure=Ou cancele o procedimento de desinstalação antes de alterar o local do diretório de instalação.
 ApplicationCouldNotBeLaunched=A aplicação não pôde ser lançada. Por favor, certifique-se de que a aplicação está instalada corretamente através do Jam54 Launcher. Gostaria de abrir o Jam54 Launcher agora?
 APPLYINGPATCH=APLICANDO PATCH
+Email=E-mail
