--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -82,3 +82,4 @@ CancelUninstall=Kurulum dizini konumunu değiştirmeden önce dosya doğrulama p
 CancelValidationProcedure=Kurulum dizini konumunu değiştirmeden önce kaldırma prosedürünü iptal edin.
 ApplicationCouldNotBeLaunched=Uygulama başlatılamadı. Lütfen uygulamanın Jam54 Başlatıcı üzerinden doğru şekilde yüklendiğinden emin olun. Jam54 Başlatıcı'yı şimdi açmak ister misiniz?
 APPLYINGPATCH=YAMA UYGULANIYOR
+Email=E-posta
